--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,6 @@ p {
   margin-right: 25%;
 }
 
-/*LINKS*/
 a:link {
   font-family: 'Mina', sans-serif;
   color: #777777;
@@ -24,7 +23,8 @@ a:link {
 a:visited {
   font-family: 'Mina', sans-serif;
   color: #777777;
-  text-decoration: none;
+  text-decoration: underline;
+  text-underline-position: below;
 }
 
 a:hover {
@@ -33,61 +33,64 @@ a:hover {
   text-decoration: underline;
 }
 
-/*TITLES*/
-h1 {
-  font-size: 6rem;
-    margin-bottom: 20px;
+li {
+  display: inline;
+  margin: 10px;
 }
 
-h2 {
-  font-size: 4rem;
+.navBarLinks {
+  text-align: center;
+  position: fixed;
+  top: 0px;
+  float: none;
+  text-align: center;
+  width: 100%;
+  padding: 0px;
 }
 
-h3 {
-  font-size: 3rem;
+.navBar{
+  height: 30px;
+  padding-bottom: 10px;
 }
 
-h4 {
-  font-size: 2rem;
-  margin-bottom: 20px;
-  margin-top: 20px;
-}
-
-h5 {
-  font-size: 1.5rem;
-}
-
-h6 {
-  font-size: 1.2rem;
-}
-
-/*CLASSES*/
 .copyrightInfo {
   font-family: 'Source Code Pro', monospace;
-  font-size: 15px;
+  font-size: 10px;
   color: #cccccc;
-  opacity: 0.5;
+  opacity: 0.6;
   text-align: center;
   width: 100%;
   bottom: 5px;
   position: fixed;
 }
 
-.title {
-  margin: 20px, 0;
+.slogan {
+  color: #d7d7d7;
+  margin: 0.5%;
+  font-style: italic;
+  font-weight: lighter;
 }
 
-.subtitle {
-  margin: 20px, 0;
+.separatorBar{
+  border-top: 1px solid #000000;
+  opacity: 0.3;
+  width: 400px;
+  padding-left: 100px;
 }
 
-.provisionalEmphasis {
-  opacity: 0.1;
+.title{
+  font-size: 6rem;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-block-start: 0px;
+  margin-block-end: 0px;
+  padding-bottom: 20px;
+  height: 120px;
+  text-align: center;
 }
 
 .indexLinks {
   text-align: center;
   width: 100%;
-  bottom: 40px;
   position: fixed;
 }
