--- a/styles/style.css
+++ b/styles/style.css
@@ -61,11 +61,11 @@ a:hover {
 }
 
 .slogan {
-  color: #d7d7d7;
+  color: #cccccc;
   margin: 0.5%;
   font-style: italic;
   font-weight: lighter;
-  padding-bottom: 20px;
+  padding-bottom: 50px;
 }
 
 .separatorBar{
@@ -76,11 +76,11 @@ a:hover {
 }
 
 #about{
-  font-size: 12px;
+  font-size: 16px;
   list-style-type: none;
-  margin-left: 25%;
-  margin-right: 25%;
-  width: fit-content;
+  margin: auto;
+  width: 800px;
+  height: fit-content;
 }
 
 .aboutText{
@@ -96,8 +96,9 @@ a:hover {
   opacity: 0.6;
   text-align: center;
   width: 100%;
-  bottom: 5px;
+  bottom: 0px;
   margin-left: auto;
   margin-right: auto;
   float: none;
+  position: absolute;
 }
