--- a/styles/style.css
+++ b/styles/style.css
@@ -31,20 +31,16 @@ a:hover {
   text-decoration: underline;
 }
 
+.navBar{
+  height: 30px;
+}
+
 .navBarLinks {
   text-align: center;
   top: 0px;
   float: none;
   text-align: center;
-  width: 100%;
-  padding: 0px;
-}
-
-.navBar{
-  height: 30px;
-}
-
-#navBarList {
+  padding: 0px; 
   display: inline;
   margin: 10px;
 }
@@ -75,7 +71,7 @@ a:hover {
   padding-left: 100px;
 }
 
-#about{
+.pageTextBox{
   font-size: 16px;
   list-style-type: none;
   margin: auto;
@@ -87,6 +83,39 @@ a:hover {
   padding: 0px;
   text-align: justify;  
   line-height: 1.2;
+  padding-bottom: 20px;
+}
+
+.contactWarning {
+  color: #999999;
+  margin: 0.5%;
+  font-weight: lighter;
+  padding-bottom: 80px;
+  font-size: 16px;
+}
+
+.contactTitle{
+  font-size: 24px;
+  color: #333333;
+  display: inline;
+}
+
+.contactText{
+  font-size: 24px;
+  color: #777777;
+  display: inline;
+}
+
+.portfolioTitle{
+  font-size: 24px;
+  color: #333333;
+}
+
+.portfolioText{
+  color: #3f3f3f;
+  margin: 0.5%;
+  padding-bottom: 35px;
+  font-size: 16px;
 }
 
 .copyrightInfo {
