--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,4 +1,7 @@
 body {
+  min-height: 100%;
+  min-width: 100%;
+  overflow: hidden;
   background-color: #f2f2f2;
 
   font-family: 'Mina', sans-serif;
@@ -77,14 +80,7 @@ a:hover {
   margin: auto;
   width: 800px;
   height: fit-content;
-}
-
-.pageTextBoxSmall{
-  font-size: 13px;
-  list-style-type: none;
-  margin: auto;
-  width: 800px;
-  height: fit-content;
+  align-items: center;
 }
 
 .aboutText{
@@ -119,24 +115,17 @@ a:hover {
   color: #333333;
 }
 
-.portfolioText{
-  color: #3f3f3f;
-  margin: 0.5%;
-  padding-bottom: 10px;
-  font-size: 13px;
-}
-
 .copyrightInfo {
   font-family: 'Source Code Pro', monospace;
   font-size: 10px;
-  color: #cccccc;
+  color: #a8a8a8;
   opacity: 0.6;
   text-align: center;
+  position: absolute;
   width: 100%;
   bottom: 0px;
   margin-left: auto;
   margin-right: auto;
   float: none;
-  position: absolute;
   padding-top: 20px;
 }
