--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -35,6 +35,7 @@ a:hover {
 }
 
 .navBar{
+  text-align: center;  
   height: 30px;
 }
 
@@ -65,6 +66,7 @@ a:hover {
   font-style: italic;
   font-weight: lighter;
   padding-bottom: 20px;
+  text-align: center;  
 }
 
 .separatorBar{
@@ -85,7 +87,7 @@ a:hover {
 
 .aboutText{
   padding: 0px;
-  text-align: justify;  
+  text-align: center;  
   line-height: 1.2;
   padding-bottom: 20px;
 }
