Changed global text align to allow for Safari users

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -7,7 +7,7 @@ body {
   font-family: 'Mina', sans-serif;
   font-size: 20px;
 
-  text-align: justify;
+  text-align: center;
   text-align-last: center;
 }
 
